[package]
name = "priq"
version = "0.1.0"
edition = "2021"

authors = ["Beka M. <bexx.modd@gmail.com>"]
description = "Array implementation of the min/max heap"
documentation = "https://github.com/bexxmodd/priq"
readme = "README.md"
homepage = "https://github.com/bexxmodd/priq"

license = "MIT"
categories = ["data-structure", "priority-queue", "binary-heap"]
keywords = ["priority", "queue", "data-structure"]

exclude = [ "benches/bench_bheap.rs", ]

[lib]
name = "priq"
path = "src/priq.rs"
test = true
doctest = true
bench = false 
crate-type = ["lib"]

[[bench]]
name = "bench_priq"
harness = false

[dev-dependencies]
bencher = "0.1.5"

[dependencies]
rand = "0.8.4"
